--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "react-starter",
+  "name": "react-start-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "next": "15.5.2"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,7 +21,7 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "15.5.2",
     "@eslint/eslintrc": "^3"
   }
 }
